--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,12 +1,11 @@
 # Stage 0, "build-stage", based on Node.js, to build and compile the frontend
-FROM tiangolo/node-frontend:10 as build-stage
+FROM tiangolo/node-frontend:10
 WORKDIR /app
 COPY package*.json /app/
 RUN npm install
 COPY ./ /app/
 ARG configuration=development
 RUN npm run build -- --output-path=./dist/out --configuration $configuration
-
 # Stage 1, based on Nginx, to have only the compiled app, ready for production with Nginx
 FROM nginx:1.15
 COPY --from=build-stage /app/dist/out/ /usr/share/nginx/html
