--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -3,4 +3,5 @@ RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 COPY . ./
 RUN npm install
+EXPOSE 4200
 CMD ["./node_modules/@angular/cli/bin/ng", "serve"]
