--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -4,4 +4,4 @@ WORKDIR /usr/src/app
 COPY . ./
 RUN npm install
 EXPOSE 4200
-CMD ["./node_modules/@angular/cli/bin/ng", "serve --disable-host-check"]
+CMD ["./node_modules/@angular/cli/bin/ng", "serve --host 0.0.0.0 -port 4200 --disable-host-check"]
